<resources>
    <string name="app_name">Schichtbericht</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Strings für den Content-->
    <string name="beginn">Beginnen</string>
    <string name="end">Beenden</string>
    <string name="dienst">Dienst</string>
    <string name="fahrt">Fahrt</string>
    <string name="pause">Pause</string>
    <string name="schicht">Schichtbericht</string>
    <string name="send">Abschicken</string>
    <string name="conn">-</string>
    <string name="imgDes">Center Image Description</string>

    <string name="right">right</string>
    <string name="left">left</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
