<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_main"
        tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/pause"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/onBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bFahrtBeginn" />

    <TextView
        android:id="@+id/tvConn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/conn"
        android:textColor="@color/onBackground"
        app:layout_constraintEnd_toStartOf="@+id/bPauseEnd"
        app:layout_constraintStart_toEndOf="@+id/bPauseBeginn"
        app:layout_constraintTop_toBottomOf="@+id/tvPause" />

    <Button
        android:id="@+id/bPauseBeginn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/beginn"
        android:background="@color/colorPrimary"
        android:textColor="@color/onPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPause" />

    <Button
        android:id="@+id/bFahrtEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/end"
        android:background="@color/colorPrimary"
        android:textColor="@color/onPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFahrt" />

    <TextView
        android:id="@+id/tvConn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/conn"
        android:textColor="@color/onBackground"
        app:layout_constraintEnd_toStartOf="@+id/bSchichtEnd"
        app:layout_constraintStart_toEndOf="@+id/bSchichtBeginn"
        app:layout_constraintTop_toBottomOf="@+id/tvSchicht" />

    <Button
        android:id="@+id/bSchichtBeginn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/beginn"
        android:background="@color/colorPrimary"
        android:textColor="@color/onPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSchicht" />

    <TextView
        android:id="@+id/tvFahrt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/fahrt"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/onBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bSchichtBeginn" />

    <Button
        android:id="@+id/bSchichtEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/end"
        android:background="@color/colorPrimary"
        android:textColor="@color/onPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSchicht" />

    <TextView
        android:id="@+id/tvSchicht"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/schicht"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/onBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bSchichtBericht" />

    <TextView
        android:id="@+id/bSchichtBericht"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/schicht"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/onBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="160dp" />

    <Button
        android:id="@+id/bPauseEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/end"
        android:background="@color/colorPrimary"
        android:textColor="@color/onPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPause" />

    <Button
        android:id="@+id/bFahrtBeginn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/beginn"
        android:background="@color/colorPrimary"
        android:textColor="@color/onPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFahrt" />

    <TextView
        android:id="@+id/tvConn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/conn"
        android:textColor="@color/onBackground"
        app:layout_constraintEnd_toStartOf="@+id/bPauseEnd"
        app:layout_constraintStart_toEndOf="@+id/bFahrtBeginn"
        app:layout_constraintTop_toBottomOf="@+id/tvFahrt" />

</android.support.constraint.ConstraintLayout>